# winrapids

./: .gitignore  CLAUDE.md  README.md  analyze_kernel_share_bug.py  derive_exp_constants.py  derive_exp_minimax.py  derive_log_minimax.py  entities.json  fintek.spec.toml  generate_extreme_conditioning.py  generate_huge_mean_tiny_variance.py  mempalace.yaml  nanvar_reference.json  pith-math-catalog.md  pyproject.toml  variance_nan_oracle.py  verify_affine_chain_error.py  verify_canonicalize.py  verify_dimhint_partial_orders.py  verify_variance_spec_claims.py
crates/tam-gpu/: Cargo.toml
crates/tam-gpu/src/: cpu.rs  cuda.rs  error.rs  lib.rs  phi_eval.rs
crates/tambear/: ADVERSARIAL-SUMMARY.md  Cargo.toml  FIX-MANIFEST.md
crates/tambear-primitives/: ARCHITECTURE.md  ATOMS.md  COMPILER_VISION.md  Cargo.toml
crates/tambear-primitives/scaffold/: new_primitive.sh
crates/tambear-primitives/src/: lib.rs
crates/tambear-primitives/src/accumulates/: metadata.rs  mod.rs
crates/tambear-primitives/src/catalog/: mod.rs
crates/tambear-primitives/src/codegen/: cuda.rs  mod.rs
crates/tambear-primitives/src/gathers/: mod.rs
crates/tambear-primitives/src/primitives/: mod.rs
crates/tambear-primitives/src/primitives/lehmer_mean/: mod.rs
crates/tambear-primitives/src/primitives/log_sum_exp/: README.md  mod.rs  params.toml
crates/tambear-primitives/src/primitives/mean_arithmetic/: mod.rs
crates/tambear-primitives/src/primitives/mean_exponential_moving/: mod.rs
crates/tambear-primitives/src/primitives/mean_geometric/: mod.rs
crates/tambear-primitives/src/primitives/mean_harmonic/: mod.rs
crates/tambear-primitives/src/primitives/mean_quadratic/: mod.rs
crates/tambear-primitives/src/primitives/mean_trimmed/: mod.rs
crates/tambear-primitives/src/primitives/mean_weighted/: mod.rs
crates/tambear-primitives/src/primitives/mean_winsorized/: mod.rs
crates/tambear-primitives/src/primitives/nan_guard/: mod.rs
crates/tambear-primitives/src/primitives/prefix_scan/: mod.rs
crates/tambear-primitives/src/primitives/recipe/: mod.rs
crates/tambear-primitives/src/primitives/semiring/: mod.rs
crates/tambear-primitives/src/primitives/softmax/: mod.rs
crates/tambear-primitives/src/recipes/: coverage_test.rs  mod.rs
crates/tambear-primitives/src/tbs/: metadata.rs  mod.rs  shape.rs
crates/tambear-primitives/src/transforms/: mod.rs
crates/tambear-primitives/tests/: adversarial_baseline.rs  adversarial_tbs_expr.rs  gpu_end_to_end.rs
crates/tambear-tam-ir/: Cargo.toml
crates/tambear-tam-ir/src/: ast.rs  fixtures.rs  interp.rs  lib.rs  main.rs  order_strategy.rs  parse.rs  print.rs  proptest.rs  verify.rs
crates/tambear-wgpu/: Cargo.toml
crates/tambear-wgpu/src/: lib.rs  main.rs
crates/tambear/docs/: dimensional-entropy-spec.md
crates/tambear/src/: accumulate.rs  bayesian.rs  beal_search.rs  bigfloat.rs  bigint.rs  causal.rs  clustering.rs  codegen.rs  collatz_parallel.rs  collatz_search.rs  collatz_structural.rs  compile_budget.rs  complexity.rs  compute_engine.rs  copa.rs  data_quality.rs  data_quality_catalog.rs  descriptive.rs  dictionary.rs  dim_reduction.rs  distributional_distances.rs  equipartition.rs  experiment0.rs  experiment1.rs  experiment1b.rs  experiment2.rs  extremal_orbit.rs  factor_analysis.rs  filter_jit.rs  fold_irreversibility.rs  format.rs  frame.rs  gather_op.rs  graph.rs  group_index.rs  hash_scatter.rs  hazard.rs  hmm.rs  hypothesis.rs  information_theory.rs  (+65 more)
crates/tambear/src/primitives/: mod.rs
crates/tambear/src/primitives/compensated/: dot.rs  eft.rs  mod.rs  sums.rs
crates/tambear/src/primitives/constants/: mod.rs
crates/tambear/src/primitives/oracle/: mod.rs  (+1 more)
crates/tambear/src/recipes/: amihud_illiquidity.rs  cvar.rs  hawkes_intensity.rs  hill_estimator_streaming.rs  hurst_exponent.rs  jarque_bera.rs  kurtosis_excess.rs  kyle_lambda.rs  lee_mykland_jump_count.rs  max_drawdown.rs  mod.rs  n_structural_breaks.rs  parkinson_volatility.rs  price_percentiles.rs  realized_spread.rs  realized_vol_subsampled.rs  regime.rs  roll_spread.rs  skewness.rs  stationarity_adf.rs  volume_profile.rs  vpin.rs
crates/tambear/src/train/: cholesky.rs  linear.rs  logistic.rs  mod.rs  naive_bayes.rs
crates/tambear/tests/: adversarial_boundary.rs  adversarial_boundary10.rs  adversarial_boundary2.rs  adversarial_boundary3.rs  adversarial_boundary4.rs  adversarial_boundary5.rs  adversarial_boundary6.rs  adversarial_boundary7.rs  adversarial_boundary8.rs  adversarial_boundary9.rs  adversarial_ci.rs  adversarial_correlations.rs  adversarial_density.rs  adversarial_disputed.rs  adversarial_expansion.rs  adversarial_fintek_gaps.rs  adversarial_fintek_gaps2.rs  adversarial_fintek_gaps3.rs  adversarial_fintek_gaps4.rs  adversarial_hardened.rs  adversarial_new_methods.rs  adversarial_power.rs  adversarial_prereqs.rs  adversarial_prereqs2.rs  adversarial_quantiles.rs  adversarial_regression.rs  adversarial_rigor_gauntlet.rs  adversarial_tbs.rs  adversarial_wave11.rs  adversarial_wave12.rs  adversarial_wave13.rs  adversarial_wave14.rs  adversarial_wave15.rs  adversarial_wave16.rs  adversarial_wave17.rs  adversarial_wave18.rs  adversarial_wave19.rs  adversarial_wave20.rs  adversarial_wave21.rs  adversarial_wave22.rs  (+48 more)
crates/winrapids-compiler/: Cargo.toml
crates/winrapids-compiler/src/: bench_branchfree.rs  bench_compiler.rs  bench_gpu_dispatch.rs  bench_kalman_affine.rs  cuda_dispatch.rs  execute.rs  ir.rs  lib.rs  main.rs  plan.rs  registry.rs  topo.rs  verify_device_scan.rs  verify_family_overlap.rs
crates/winrapids-py/: Cargo.toml  pyproject.toml
crates/winrapids-py/src/: lib.rs
crates/winrapids-scan/: Cargo.toml
crates/winrapids-scan/src/: bench_kernel_time.rs  cache.rs  engine.rs  fused_expr.rs  launch.rs  lib.rs  main.rs  ops.rs  verify_affine.rs  verify_correctness.rs
crates/winrapids-store/: Cargo.toml
crates/winrapids-store/src/: bench_hit_miss.rs  header.rs  lib.rs  main.rs  provenance.rs  store.rs  world.rs
crates/winrapids-tiled/: Cargo.toml
crates/winrapids-tiled/src/: cache.rs  dispatch.rs  engine.rs  lib.rs  main.rs  ops.rs
(+1699 files in other folders)
