[package]
name = "tambear-primitives"
version = "0.1.0"
edition = "2021"
description = "Flat catalog of mathematical primitives. One folder per primitive. The filesystem IS the inventory."

[dependencies]
# No dependencies on tambear — this is the foundation, not a wrapper.
# tambear will eventually depend on US, not the other way around.

[dev-dependencies]
# The vendor door. Only pulled in for integration tests that actually
# hit GPU silicon. The `codegen` module itself has zero runtime deps —
# it emits strings — which keeps the core library clean.
tam-gpu = { path = "../tam-gpu", default-features = true }
bytemuck = { version = "1", features = ["derive"] }
