[package]
name = "tambear"
version = "0.1.0"
edition = "2021"
description = "Sort-free DataFrame engine. Tam doesn't sort. Tam knows."

[dependencies]
cudarc = { version = "0.19", features = ["nvrtc", "cuda-version-from-build-system"] }
blake3 = "1"

[[bin]]
name = "tambear-test"
path = "src/main.rs"

[[bin]]
name = "tam-real-data"
path = "src/real_data.rs"

[[bin]]
name = "tb-demo"
path = "src/tb_demo.rs"

[[bin]]
name = "io-bench"
path = "src/io_bench.rs"

[[bin]]
name = "scatter-bench"
path = "src/scatter_bench.rs"
