[package]
name = "winrapids-compiler"
version = "0.1.0"
edition = "2021"
description = "Pipeline compiler: spec → primitive DAG → CSE → execution plan. The sharing optimizer's brain."

[dependencies]
blake3 = "1"
winrapids-store = { path = "../winrapids-store" }
winrapids-scan = { path = "../winrapids-scan" }

[[bin]]
name = "compiler-test"
path = "src/main.rs"

[[bin]]
name = "bench-compiler"
path = "src/bench_compiler.rs"

[[bin]]
name = "bench-gpu-dispatch"
path = "src/bench_gpu_dispatch.rs"

[[bin]]
name = "verify-device-scan"
path = "src/verify_device_scan.rs"

[[bin]]
name = "bench-kalman-affine"
path = "src/bench_kalman_affine.rs"

[[bin]]
name = "verify-family-overlap"
path = "src/verify_family_overlap.rs"

[[bin]]
name = "bench-branchfree"
path = "src/bench_branchfree.rs"
