[package]
name = "winrapids-scan"
version = "0.1.0"
edition = "2021"
description = "Pluggable parallel scan with associative operators on GPU. The liftability principle in code."

[dependencies]
cudarc = { version = "0.19", features = ["nvrtc", "cuda-version-from-build-system"] }
blake3 = "1"

[[bin]]
name = "scan-test"
path = "src/main.rs"

[[bin]]
name = "bench-scan-engine"
path = "src/bench_scan_engine.rs"

[[bin]]
name = "verify-correctness"
path = "src/verify_correctness.rs"

[[bin]]
name = "bench-kernel-time"
path = "src/bench_kernel_time.rs"
